# Cocoa

./: .gitignore  CMakeLists.txt  README.md
docs/: Cocoa User Specification.docx  cocoa_layout_property.txt
res/: Cocoa.json  MainView.css  cocoa_layout.rts  config.json  drmhowto-double-buffer.c  ktdl_note.txt  ktdl_sample.txt  test.html  test.js  visual_novel_example.xml
src/: Main.cc  file2symbol.sh
src/Ciallo/: BaseWindow.cc  BaseWindow.h  CMakeLists.txt  GrBase.h  GrDefinitions.h  GrUtils.cc  GrUtils.h  GraphicsContext.cc  GraphicsContext.h  SkpSnapshot.cc  SkpSnapshot.h  Thread.cc  Thread.h  XCBWindow.cc  XCBWindow.h
src/Ciallo/DDR/: GrBaseCompositor.cc  GrBaseCompositor.h  GrBasePlatform.cc  GrBasePlatform.h  GrBaseRenderLayer.cc  GrBaseRenderLayer.h  GrCpuCompositor.cc  GrCpuCompositor.h  GrCpuRenderLayer.cc  GrCpuRenderLayer.h  GrGpuCompositor.cc  GrGpuCompositor.h  GrGpuRenderLayer.cc  GrGpuRenderLayer.h  GrLayerResult.cc  GrLayerResult.h  GrOpenCLCompositor.cc  GrOpenCLCompositor.h  GrOpenCLRenderLayer.cc  GrOpenCLRenderLayer.h  GrTargetSurface.cc  GrTargetSurface.h  GrXcbPlatform.cc  GrXcbPlatform.h
src/Ciallo/DIR/: BaseNode.cc  BaseNode.h  CompositeNode.cc  CompositeNode.h  PaintNode.cc  PaintNode.h  RenderNode.cc  RenderNode.h
src/Ciallo/test/: a.out  crc32_calc  logo.cskp  save_cskp_file.cc
src/Core/: CMakeLists.txt  Configurator.cc  Configurator.h  Exception.cc  Exception.h  MeasuredTable.h  Project.h  PropertyTree.cc  PropertyTree.h  QObject.cc  QObject.h  StrictJSONParser.cc  StrictJSONParser.h  UniquePersistent.h  Utils.cc  Utils.h
src/Core/laboratory/: Configurator  test  test.cc  test.json
src/Core/test/: except  except.cc  persistent  persistent.cc  property  property.cc  slots.cc
src/Komorebi/: KEvent.cc  KEvent.h  KTDLParser.cc  KTDLParser.h  KWidget.cc  KWidget.h  Komorebi.h  Math.h  MathX86SIMD.h
src/Komorebi/css/: CSSCalculator.cc  CSSCalculator.h  CSSComputedStyle.cc  CSSComputedStyle.h  CSSDOMVisitor.cc  CSSDOMVisitor.h  CSSSelectionContext.cc  CSSSelectionContext.h  CSSStylesheet.cc  CSSStylesheet.h  CSSStylesheetEnvironment.cc  (+2 more)
src/ciallo/: GrBase.cc  GrBase.h  GrGpe.cc  GrGpe.h  GrGpeFramework.h  GrGpeLoader.cc  GrGpeLoader.h  GrUtils.cc  GrUtils.h  GraphicsContext.cc  GraphicsContext.h  SkpSnapshot.cc  SkpSnapshot.h  Thread.cc  Thread.h
src/core/: Configurations.cc  Configurator.cc  Configurator.h  Exception.cc  Exception.h  IODispatcher.cc  IODispatcher.h  Journal.cc  Journal.h  MeasuredTable.h  ObjectHolder.cc  ObjectHolder.h  Project.h  QObject.cc  QObject.h  Slot.h  Slot.h.gch
src/komorebi/: KEvent.cc  KEvent.h  KTDLParser.cc  KTDLParser.h  KWidget.cc  KWidget.h  Komorebi.h  Math.h  MathX86SIMD.h
src/moe/: Allocation.cc  Allocation.h  GCHeap.cc  GCHeap.h  GarbageCollected.h  Handle.h  Moe.h  Visitor.cc  Visitor.h
test/: .gdb_history  CairoImageSurface  CairoImageSurface.cc  IODispatchTest  IODispatchTest.cc  PocoNDC  PocoNDC.cc  PocoSharedPtr  PocoSharedPtr.cc  SharedMemory  SharedMemory.cc  SlotsTest  SlotsTest.cc  StaticMember  StaticMember.cc  call  call.c  chinese  chinese.cc  css_example  css_example.c  css_parse.cc  css_parser  dwarf  dwarf.c  ffi  ffi.cc  glfw-vulkan  glfw-vulkan.cc  hello  mangle  mangle.cc  mark_sweep_gc  mark_sweep_gc.cc  restrict.c  shared_ptr_polymorphism  shared_ptr_polymorphism.cc  sksl  sksl.cc  slot_call.cc  (+7 more)
tools/: CSSSpecifier.in  CSSSpecifierStr.in  CSSSpecifierStringGenerator  CSSSpecifierStringGenerator.cc  convert_css_properties_to_enum_class.sh  malloc_replace.cc  save_skp_file  save_skp_file.cc  skia_logo.skp  tmp.txt
(+56 files in other folders)
